--- a/instructions.tex
+++ b/instructions.tex
@@ -48,6 +48,8 @@
 \subsection{Documentation and guides}
 %\label{sec:documentation-guides}
 
+% TODO: move these as library elemnts that can be cited !!
+
 \begin{itemize}
 \item Board product information:\\ 
   \url{https://www.xilinx.com/products/som/kria/kv260-vision-starter-kit.html}
