--- a/README.org
+++ b/README.org
@@ -7,6 +7,48 @@
 #+subtitle: \begin{CJK}{UTF8}{min}南山大学\end{CJK}
 #+author: Vincent Conus
 #+date: 2023-8-24
+
+* Introduction
+
+** Motivation
+This guide will present how to setup and use Xilinx's KRIA board, in particular
+for running ROS on a host Ubuntu system, as well as for deploying
+micro-ROS as a firmware on the MCU part of this board's chip.
+
+** Build instructions for this report
+The base file for this report is actually this README.org file itself.
+However, upon local build, this file is regularly exported as
+a ~.tex~ file that can be built normally.
+On a moderately recent Ubuntu-base distribution, the following packages seemed to be required to build the
+report:
+
+#+BEGIN_SRC bash
+  sudo apt-get install texlive-base texlive-latex-recommended texlive-lang-japanese
+#+END_SRC
+
+Then, the actual build can be made with a simple:
+
+#+BEGIN_SRC bash
+  pdflatex instructions.tex
+#+END_SRC
+
+No fancy Lua or theme at the moment !
+
+*** Automatic build with CI/CD pipeline
+If you don't want to build the report yourself, a CI pipeline is used to make it on GitLab.
+
+You can check the steps in the .gitlab-ci.yml file.
+This build uses a base Ubuntu image and basically takes the same steps as presented above for a local build.
+
+A PDF artifact can be downloaded.
+
+*** Headers and LaTeX settings for export
+A large amount of headers and parameters are needed in order
+to have this "README" document being exportable as a LaTeX
+document formated the way I wanted it to be.
+
+The detail can be seen in the raw ~.org~ version of this README.
+
 #+DESCRIPTION: A report presenting how to use and set Xilinx's Kria board
 #+LANGUAGE: English
 
@@ -55,40 +97,6 @@
        "\\tableofcontents\n"
        "\\pagebreak\n"))
 #+end_src
-
-* Introduction
-
-** Motivation
-This guide will present how to setup and use Xilinx's KRIA board, in particular
-for running ROS on a host Ubuntu system, as well as for deploying
-micro-ROS as a firmware on the MCU part of this board's chip.
-
-** Build instructions for this report
-The base file for this report is actually this README.org file itself.
-However, upon local build, this file is regularly exported as
-a ~.tex~ file that can be built normally.
-On a moderately recent Ubuntu-base distribution, the following packages seemed to be required to build the
-report:
-
-#+BEGIN_SRC bash
-  sudo apt-get install texlive-base texlive-latex-recommended texlive-lang-japanese
-#+END_SRC
-
-Then, the actual build can be made with a simple:
-
-#+BEGIN_SRC bash
-  pdflatex instructions.tex
-#+END_SRC
-
-No fancy Lua or theme at the moment !
-
-** Automatic build with CI/CD pipeline
-If you don't want to build the report yourself, a CI pipeline is used to make it on GitLab.
-
-You can check the steps in the .gitlab-ci.yml file.
-This build uses a base Ubuntu image and basically takes the same steps as presented above for a local build.
-
-A PDF artifact can be downloaded.
 
 * Boot firmware
 The goal for the Linux side of the deployment is to
@@ -141,3 +149,20 @@ From this "recovery" page, it is possible to upload the ~.bin~ file downloaded p
 the board using the "Recover Image" section at the bottom right of the page.
 
 The board can be re-booted afterwards.
+
+* Linux
+Withe the boot firmware being up-to-date, we can proceed to install a Linux distribution
+on our Kria board. The step needed to archive a full installation of Ubuntu 22.04
+will be presented in this section.
+
+* remoteproc
+
+* micro-ROS as a static library
+
+* Real-time firmware building
+
+* ROS2
+
+** In a container
+
+* micro-ROS agent
