--- a/README.tex
+++ b/README.tex
@@ -1,4 +1,4 @@
-% Created 2023-08-24 木 17:49
+% Created 2023-08-24 木 23:14
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt]{article}
 \usepackage[utf8]{inputenc}
@@ -53,17 +53,10 @@
 \includegraphics[width=0.8\textwidth]{./img/board}\end{titlepage}
 \tableofcontents
 \pagebreak
-\section{Introduction}
-\label{sec:orgad1986e}
-
-\subsection{Motivation}
-\label{sec:org673d9dc}
-This guide will present how to setup and use Xilinx's KRIA board, in particular
-for running ROS on a host Ubuntu system, as well as for deploying
-micro-ROS as a firmware on the MCU part of this board's chip.
-
+\section{About this documents}
+\label{sec:org3952ce8}
 \subsection{Build instructions for this report}
-\label{sec:org40c49ec}
+\label{sec:orge38070b}
 The base file for this report is actually this README.org file itself.
 However, upon local build, this file is regularly exported as
 a \texttt{.tex} file that can be built normally.
@@ -83,7 +76,7 @@ pdflatex instructions.tex
 No fancy Lua or theme at the moment !
 
 \subsection{Automatic build with CI/CD pipeline}
-\label{sec:org805eeb6}
+\label{sec:org96d47cb}
 If you don't want to build the report yourself, a CI pipeline is used to make it on GitLab.
 
 You can check the steps in the .gitlab-ci.yml file.
@@ -91,8 +84,19 @@ This build uses a base Ubuntu image and basically takes the same steps as presen
 
 A PDF artifact can be downloaded.
 
+\section{Introduction \& motivation}
+\label{sec:orge49a531}
+This guide will present how to setup and use Xilinx's KRIA board, in particular
+for running ROS on a host Ubuntu system, as well as for deploying
+micro-ROS as a firmware on the MCU part of this board's chip.
+
+The use of this device in particular is interesting because of the presence
+of a CPU comprising both a general purpose ARM core, capable of running
+a Linux distribution, as well as another ARM core, real-time enabled,
+capable to run a RTOS.
+
 \section{Boot firmware}
-\label{sec:org22dac04}
+\label{sec:org60db204}
 The goal for the Linux side of the deployment is to
 have the latest LTS version of Ubuntu up and running.
 In order to be able to boot such a newer version of Linux, the
@@ -102,7 +106,7 @@ The procedure is available in \href{https://docs.xilinx.com/r/en-US/ug1089-kv260
 but I will present it step by step here.
 
 \subsection{Getting the new firmware}
-\label{sec:org76cabda}
+\label{sec:org9bf8cb2}
 A 2022 version of the board firmware is required in order to run the latest
 version of Ubuntu properly.
 
@@ -116,7 +120,7 @@ wget https://www.xilinx.com/member/forms/download/\
 
 
 \subsection{Reaching the board recovery tool}
-\label{sec:orgbbdb9d5}
+\label{sec:org4e82238}
 Now the firmware \texttt{.bin} image is available, it is possible to update it using the
 boards recovery tool. Here are the steps that must be taken in order to reach
 this tool and update the board:
@@ -131,19 +135,57 @@ range, except the specific \texttt{192.168.0.111}, which will be used by the
 board.
 \item Using a web browser on your host machine, access
 \texttt{http://192.168.0.111}. Thou shall now see the interface, as visible on
-the figure \ref{fig:org004f0b2} below.
+the figure \ref{fig:org5263359} below.
 \end{itemize}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=1\textwidth]{img/recovery.png}
-\caption{\label{fig:org004f0b2}The recovery tool for the board, access from Firefox. We can see board information at the center, and the tools to upload the firmware at the bottom of the page.}
+\caption{\label{fig:org5263359}The recovery tool for the board, access from Firefox. We can see board information at the center, and the tools to upload the firmware at the bottom of the page.}
 \end{figure}
 
 \subsection{Updating the boot firmware}
-\label{sec:org399f7af}
+\label{sec:orga85dbb7}
 From this "recovery" page, it is possible to upload the \texttt{.bin} file downloaded previously onto
 the board using the "Recover Image" section at the bottom right of the page.
 
 The board can be re-booted afterwards.
+
+\section{Installing Linux}
+\label{sec:orgffb0e49}
+
+\section{Enabeling \texttt{remoteproc}}
+\label{sec:org5e002bf}
+
+\section{Loading a real-time firmware}
+\label{sec:org592c9d4}
+
+\section{Building micro-ROS as a static library}
+\label{sec:org614c6bb}
+
+\section{Building a real-time firmware}
+\label{sec:org8d40ae3}
+
+\subsection{Setting up Vitis IDE}
+\label{sec:org32198f0}
+
+\section{Adding micro-ROS to a firmware project}
+\label{sec:org52988a4}
+
+\section{Loading a real-time firmware}
+\label{sec:orgc3ff4b7}
+
+\section{Running a ROS2 node}
+\label{sec:org9ead220}
+
+\subsection{On the host Linux}
+\label{sec:orga58a0ee}
+
+\subsection{In a container}
+\label{sec:org04afd82}
+
+
+\appendix
+\section{DTO patch}
+\label{sec:org37f2fd5}
 \end{document}
