--- a/README.org
+++ b/README.org
@@ -182,5 +182,58 @@ will be presented in this section.
 
 * micro-ROS agent
 
+#+LATEX: \pagebreak
 #+LATEX: \appendix
 * DTO patch  
+#+LATEX: \inputminted[linenos, frame=single]{diff}{./src/system.patch}
+
+#+LATEX: \pagebreak
+* Custom toolchain CMake settings
+#+LATEX: \inputminted[linenos, frame=single]{cmake}{./src/custom_r5f_toolchain.cmake}
+
+#+LATEX: \pagebreak
+* Custom Colcon meta settings
+#+LATEX: \inputminted[linenos, frame=single]{yaml}{./src/custom_r5f_colcon.meta}
+
+#+LATEX: \pagebreak
+* Firmware time functions
+
+** main
+#+LATEX: \inputminted[linenos, frame=single]{c}{./src/clock.c}
+
+** header file
+#+BEGIN_SRC C
+  /**< Microseconds per second. */
+  #define MICROSECONDS_PER_SECOND    ( 1000000LL )  
+  /**< Nanoseconds per second. */
+  #define NANOSECONDS_PER_SECOND     ( 1000000000LL ) 
+  /**< Nanoseconds per FreeRTOS tick. */  
+  #define NANOSECONDS_PER_TICK       ( NANOSECONDS_PER_SECOND / configTICK_RATE_HZ ) 
+#+END_SRC
+
+
+#+LATEX: \pagebreak
+* Firmware memory allocation functions
+
+** main
+#+LATEX: \inputminted[linenos, frame=single]{c}{./src/allocators.c}
+
+** header file
+#+BEGIN_SRC C
+  #ifndef _ALLOCATORS_H_
+  #define _ALLOCATORS_H_
+
+  #include "microros.h"
+
+  extern int absoluteUsedMemory;
+  extern int usedMemory;
+
+
+  void * __freertos_allocate(size_t size, void * state);
+  void __freertos_deallocate(void * pointer, void * state);
+  void * __freertos_reallocate(void * pointer, size_t size, void * state);
+  void * __freertos_zero_allocate(size_t number_of_elements,
+  size_t size_of_element, void * state);
+
+  #endif // _ALLOCATORS_H_
+#+END_SRC
