--- a/README.org
+++ b/README.org
@@ -50,7 +50,7 @@ A PDF artifact can be downloaded.
 *** Headers and LaTeX settings for export
 A large amount of headers and parameters are needed in order
 to have this "README" document being exportable as a LaTeX
-document formated the way I wanted it to be.
+document formatted the way I wanted it to be.
 
 The detail can be seen in the raw ~.org~ version of this README.
 
@@ -68,6 +68,8 @@ The detail can be seen in the raw ~.org~ version of this README.
 #+LATEX_HEADER: \usepackage[AUTO]{inputenc}
 #+LATEX_HEADER: \renewcommand{\familydefault}{\sfdefault}
 #+LATEX_HEADER: \usemintedstyle{vs}
+
+#+LATEX_HEADER: \usepackage[most]{tcolorbox}
 
 #+LATEX_HEADER: \usepackage{CJKutf8}
 #+LATEX_HEADER: \usepackage{xurl}
@@ -160,7 +162,62 @@ Withe the boot firmware being up-to-date, we can proceed to install a Linux dist
 on our Kria board. The step needed to archive a full installation of Ubuntu 22.04
 will be presented in this section.
 
-* Enabeling ~remoteproc~
+** Preparing and booting a Ubuntu 22.04 media
+An [[https://ubuntu.com/download/amd-xilinx][official Ubuntu image]] exists and is
+provided by Xilinx, allowing the OS installation to be quick and
+straightforward.
+Ubuntu is a common and easy to use distribution. Furthermore,
+it allows to install ROS2 as a package, which is most convenient and will be
+done later in this guide.
+
+Once the image has been downloaded at [[https://ubuntu.com/download/amd-xilinx][Canonical's page]]
+we can flash it onto the SD card, with the following instructions.
+
+#+LATEX: \begin{tcolorbox}[colback=red!5!white,colframe=red!75!black]
+*WARNING*: The next part involve the ~dd~ command writing on disks!!!
+As always with the dd command, thou have to be *VERY* careful on what arguments
+thou give. Selecting the wrong disk will result on the destruction of
+thy data !!
+_If you are unsure of what to do, seek assistance !_
+#+LATEX: \end{tcolorbox}
+
+With the image available on thy machine and a SD card visible as ~/dev/sda~
+[fn:1] one can simply run the ~dd~ command as follow to
+write the image to a previously formatted drive (here ~/dev/sda~):
+
+#+BEGIN_SRC sh
+  sudo dd if=iot-limerick-kria-classic-desktop-2204-x07-20230302-63.img \
+  of=/dev/sda status=progress bs=8M && sync
+#+END_SRC
+
+
+Once the SD card is flashed and put back in the board, the micro-USB cable can be
+connected from the PC to the board. It is then possible to
+connect to the board in serial with an appropriate tool, for example ~picocom~,
+as in the following example (the serial port that "appeared" was the ~/dev/ttyUSB1~ in this case,
+and the 115200 bitrate is the default value for the board):
+
+#+BEGIN_SRC sh
+  sudo picocom /dev/ttyUSB1 -b 115200
+#+END_SRC
+
+Once logged in, it is typically easier and more convenient to connect the board
+using SSH. When the board is connected to the network, it is possible to know
+it's IP address with the ~ip~ command; then it is possible to connect to
+the board with ssh, as follow (example, with the first command to be run on the board
+and the second one on the host PC, both without the first placeholder hostnames):
+
+
+#+BEGIN_SRC sh
+  kria# ip addr
+
+  host# ssh ubuntu@192.168.4.11
+#+END_SRC
+
+
+
+
+* Enabling ~remoteproc~
 
 * Loading a real-time firmware
 
@@ -237,3 +294,8 @@ will be presented in this section.
 
   #endif // _ALLOCATORS_H_
 #+END_SRC
+
+* Footnotes
+
+[fn:1] Again, it is critical to be 100\% certain that you are working with
+the correct device! 
